# otelite

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI_DESIGN.md  CONTRIBUTING.md  Cargo.toml  FUTURE_IMPROVEMENTS.md  IMPLEMENTATION_PLAN_rotel-3eh.md  IMPLEMENTATION_PLAN_rotel-q3y.md  LICENSE  PLAN.md  README.md  SECURITY.md  TEST_COVERAGE_REVIEW.md  clippy.toml  deny.toml  dist-workspace.toml  findings.md  json_path_probe.py  rust-toolchain.toml  rustfmt.toml
crates/otelite/: Cargo.toml  build.rs
crates/otelite-api/: Cargo.toml
crates/otelite-api/src/: config.rs  lib.rs  server.rs
crates/otelite-api/src/api/: help.rs  logs.rs  metrics.rs  traces.rs
crates/otelite-api/static/: index.html
crates/otelite-api/static/css/: styles.css
crates/otelite-api/static/js/: api.js  app.js  logs.js  traces.js  usage.js
crates/otelite-api/tests/: api_integration_test.rs  genai_api_test.rs
crates/otelite-cli/: Cargo.toml
crates/otelite-cli/src/: error.rs  lib.rs  main.rs
crates/otelite-cli/src/api/: client.rs  mod.rs  models.rs
crates/otelite-cli/src/commands/: logs.rs  metrics.rs  traces.rs
crates/otelite-cli/src/output/: json.rs  mod.rs  pager.rs  pretty.rs
crates/otelite-cli/tests/: cli_parsing_test.rs  logs_test.rs  metrics_test.rs  traces_test.rs
crates/otelite-cli/tests/fixtures/: sample_metrics.json
crates/otelite-client/: Cargo.toml
crates/otelite-client/src/: client.rs  error.rs  lib.rs  models.rs
crates/otelite-core/: Cargo.toml
crates/otelite-core/src/: api.rs  lib.rs  query.rs  storage.rs
crates/otelite-core/src/telemetry/: formatting.rs  metric.rs  mod.rs  trace.rs
crates/otelite-core/tests/: example_e2e_test.rs  example_integration_test.rs
crates/otelite-core/tests/common/: mod.rs
crates/otelite-core/tests/fixtures/: sample_traces.json
crates/otelite-receiver/: Cargo.toml
crates/otelite-receiver/src/: conversion.rs  error.rs  lib.rs
crates/otelite-receiver/src/grpc/: logs.rs  metrics.rs  server.rs  traces.rs
crates/otelite-receiver/src/http/: handlers.rs  routes.rs  server.rs
crates/otelite-receiver/src/protocol/: mod.rs  protobuf.rs  validation.rs
crates/otelite-receiver/src/signals/: logs.rs  metrics.rs  traces.rs
crates/otelite-receiver/tests/: e2e_test.rs  grpc_concurrent_test.rs  grpc_signals_test.rs  grpc_test_utils.rs  http_json_test.rs  http_protobuf_test.rs  pipeline_integration_test.rs
crates/otelite-storage/: Cargo.toml  README.md
crates/otelite-storage/src/: config.rs  error.rs  lib.rs
crates/otelite-storage/src/sqlite/: mod.rs  purge.rs  reader.rs  schema.rs  writer.rs
crates/otelite-storage/tests/: stats_purge_test.rs  token_usage_test.rs
crates/otelite-storage/tests/fixtures/: sample_logs.json  sample_metrics.json  sample_spans.json
crates/otelite-storage/tests/integration/: fts5_search_test.rs  persistence_test.rs  reader_coverage_test.rs  structured_query_test.rs  zero_config_test.rs
crates/otelite-tui/: Cargo.toml  build.rs
crates/otelite-tui/src/: app.rs  config.rs  events.rs  lib.rs  main.rs
crates/otelite-tui/src/api/: client.rs  mod.rs  models.rs
crates/otelite-tui/src/state/: logs.rs  metrics.rs  mod.rs  traces.rs
crates/otelite-tui/src/ui/: help.rs  logs.rs  metrics.rs  mod.rs  traces.rs
crates/otelite/src/: config.rs  error.rs  lib.rs  main.rs
crates/otelite/src/commands/: import.rs  logs.rs  metrics.rs  mod.rs  service.rs  traces.rs  usage.rs
crates/otelite/src/output/: colors.rs  json.rs  pager.rs  pretty.rs
crates/otelite/tests/: cli_parsing_test.rs  import_test.rs  logs_test.rs  main_cli_test.rs  metrics_test.rs  scripting_test.rs  traces_test.rs
crates/rotel-api/: Cargo.toml  README.md
crates/rotel-api/src/: config.rs  error.rs  lib.rs  server.rs
crates/rotel-api/src/handlers/: health.rs  logs.rs  metrics.rs  mod.rs  traces.rs
crates/rotel-api/src/middleware/: cors.rs  error.rs  logging.rs  mod.rs
crates/rotel-api/src/models/: health.rs  metric.rs  mod.rs  pagination.rs  request.rs  response.rs  trace.rs
crates/rotel-api/src/routes/: docs.rs  health.rs  logs.rs  metrics.rs  mod.rs  traces.rs
crates/rotel-api/tests/: health_integration_test.rs  logs_integration_test.rs  metrics_integration_test.rs  traces_integration_test.rs
crates/rotel-api/tests/fixtures/: sample_logs.json  sample_metrics.json  sample_traces.json
crates/rotel-cli/: Cargo.toml  build.rs
crates/rotel-cli/src/: config.rs  error.rs  lib.rs  main.rs
crates/rotel-cli/src/api/: client.rs  mod.rs  models.rs
crates/rotel-cli/src/commands/: logs.rs  metrics.rs  mod.rs  service.rs  traces.rs  usage.rs
crates/rotel-cli/src/output/: formatters.rs  json.rs  (+2 more)
crates/rotel-cli/tests/: cli_parsing_test.rs  logs_test.rs  main_cli_test.rs  metrics_test.rs  scripting_test.rs  traces_test.rs
crates/rotel-core/: Cargo.toml
crates/rotel-core/src/: api.rs  lib.rs  query.rs
crates/rotel-core/tests/: example_e2e_test.rs  example_integration_test.rs
crates/rotel-receiver/: Cargo.toml
crates/rotel-receiver/:memory:?cache=shared&mode=memory&name=e2e_test_1776583985516368000/: rotel.db-shm  rotel.db-wal
crates/rotel-receiver/:memory:?cache=shared&mode=memory&name=e2e_test_1776703765821503000/: rotel.db-shm  rotel.db-wal
crates/rotel-receiver/src/: config.rs  conversion.rs  error.rs  health.rs  lib.rs
crates/rotel-receiver/tests/: e2e_test.rs  grpc_concurrent_test.rs  grpc_signals_test.rs  grpc_test_utils.rs  http_json_test.rs  http_protobuf_test.rs  http_test_utils.rs  pipeline_integration_test.rs
crates/rotel-server/: Cargo.toml
crates/rotel-server/src/: cache.rs  config.rs  lib.rs  server.rs  static_files.rs
crates/rotel-server/static/: index.html
crates/rotel-server/tests/: api_integration_test.rs  genai_api_test.rs
crates/rotel-storage/: Cargo.toml  README.md
crates/rotel-storage/src/: config.rs  error.rs  lib.rs
crates/rotel-storage/tests/: stats_purge_test.rs  token_usage_test.rs
crates/rotel-tui/: Cargo.toml  build.rs
crates/rotel-tui/src/: app.rs  config.rs  events.rs  lib.rs  main.rs
(+128 files in other folders)
