[workspace]
resolver = "2"
members = [
    "crates/rotel-core",
    "crates/rotel-receiver",
    "crates/rotel-cli",
    "crates/rotel-storage",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["Rotel Contributors"]
license = "Apache-2.0"
repository = "https://github.com/rotel/rotel"
homepage = "https://github.com/rotel/rotel"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Testing
pretty_assertions = "1.4"
assert_matches = "1.5"
mockall = "0.12"
criterion = "0.5"
tempfile = "3.10"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1
debug = true
