[workspace]
resolver = "2"
members = [
    "crates/otelite-core",
    "crates/otelite-receiver",
    "crates/otelite",
    "crates/otelite-storage",
    "crates/otelite-tui",
    "crates/otelite-api",
    "crates/otelite-client",
]

[workspace.package]
version = "0.1.8"
edition = "2021"
rust-version = "1.77"
authors = ["Otelite Contributors"]
license = "Apache-2.0"
repository = "https://github.com/planetf1/otelite"
homepage = "https://github.com/planetf1/otelite"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Testing
pretty_assertions = "1.4"
assert_matches = "1.5"
mockall = "0.12"
criterion = "0.5"
tempfile = "3.10"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Shared framework dependencies
axum = "0.8"
reqwest = { version = "0.12", default-features = true, features = ["json"] }
thiserror = "2.0"
ratatui = "0.29"
crossterm = "0.29"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
