[package]
name = "otelite-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
[[bin]]
name = "otelite"
path = "src/main.rs"

[lib]
name = "otelite_cli"
path = "src/lib.rs"


[dependencies]
clap = { workspace = true, features = ["env"] }
comfy-table = "7.1"
minus = { version = "5.6", features = ["static_output", "search"] }
atty = "0.2"
term_size = "0.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { workspace = true }

# Unix signal handling for daemon management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

# Internal dependencies
otelite-core = { path = "../otelite-core" }
otelite-server = { path = "../otelite-server" }
otelite-receiver = { path = "../otelite-receiver" }
otelite-storage = { path = "../otelite-storage" }
otelite-tui = { path = "../otelite-tui" }

[dev-dependencies]
mockito = "1.2"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.13"
csv = "1.3"
