[package]
name = "otelite-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core telemetry domain types for the Otelite OpenTelemetry receiver"
keywords = ["opentelemetry", "observability", "otlp", "telemetry"]
categories = ["data-structures"]
documentation = "https://docs.rs/otelite-core"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
utoipa = { version = "4", optional = true }

[features]
openapi = ["utoipa"]

[dev-dependencies]
pretty_assertions = { workspace = true }
assert_matches = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }
env_logger = { workspace = true }
