[package]
name = "otelite-receiver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OTLP receiver for Otelite: ingests gRPC and HTTP telemetry from OpenTelemetry SDKs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# gRPC server
tonic = "0.14"
prost = "0.14"

# HTTP server
axum = { workspace = true }
hyper = "1.0"
tower = { version = "0.4", features = ["limit", "timeout"] }

# OTLP protocol definitions
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "metrics", "logs", "trace", "with-serde"] }

# Internal crates
otelite-core = { path = "../otelite-core", version = "0.1.0" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Compression
flate2 = "1.0"
async-compression = { version = "0.4", features = ["tokio", "gzip", "deflate"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
otelite-server = { path = "../otelite-server", version = "0.1.0" }
otelite-storage = { path = "../otelite-storage", version = "0.1.0" }
