[package]
name = "otelite-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Embedded storage layer for Otelite OTLP receiver"
repository.workspace = true

[dependencies]
# Core dependencies
otelite-core = { path = "../otelite-core", version = "0.1.0" }

# SQLite embedded database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Directory utilities
dirs = "5.0"

[dev-dependencies]
# Testing utilities
tempfile = { workspace = true }
tokio-test = "0.4"

[lib]
name = "otelite_storage"
path = "src/lib.rs"

[[test]]
name = "zero_config_test"
path = "tests/integration/zero_config_test.rs"

[[test]]
name = "persistence_test"
path = "tests/integration/persistence_test.rs"

[[test]]
name = "fts5_search_test"
path = "tests/integration/fts5_search_test.rs"

[[test]]
name = "reader_coverage_test"
path = "tests/integration/reader_coverage_test.rs"

[[test]]
name = "structured_query_test"
path = "tests/integration/structured_query_test.rs"
