[package]
name = "otelite-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal User Interface for Otelite OpenTelemetry receiver"
keywords = ["opentelemetry", "observability", "otlp", "tui", "terminal"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/otelite-tui"
repository.workspace = true

[lib]
name = "otelite_tui"
path = "src/lib.rs"

[dependencies]
# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async runtime
tokio = { workspace = true }

# API client
otelite-client = { path = "../otelite-client", version = "0.1.0" }

# Time handling
chrono = { workspace = true }

# Error handling
anyhow = "1.0"

otelite-core = { path = "../otelite-core", version = "0.1.0" }

[dev-dependencies]
mockito = "1.2"
