[package]
name = "rotel-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal dependencies
rotel-dashboard = { path = "../rotel-dashboard" }
rotel-receiver = { path = "../rotel-receiver" }
rotel-storage = { path = "../rotel-storage" }
