[package]
name = "rotel-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
[[bin]]
name = "rotel-cli"
path = "src/main.rs"

[lib]
name = "rotel_cli"
path = "src/lib.rs"


[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
comfy-table = "7.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Internal dependencies
rotel-core = { path = "../rotel-core" }
rotel-server = { path = "../rotel-server" }
rotel-receiver = { path = "../rotel-receiver" }
rotel-storage = { path = "../rotel-storage" }

[dev-dependencies]
mockito = "1.2"
assert_cmd = "2.0"
predicates = "3.0"
