[package]
name = "rotel-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
[[bin]]
name = "rotel-cli"
path = "src/main.rs"

[lib]
name = "rotel_cli"
path = "src/lib.rs"


[dependencies]
clap = { workspace = true, features = ["env"] }
comfy-table = "7.1"
minus = { version = "5.6", features = ["static_output", "search"] }
atty = "0.2"
term_size = "0.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { workspace = true }

# Unix signal handling for daemon management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

# Internal dependencies
rotel-core = { path = "../rotel-core" }
rotel-server = { path = "../rotel-server" }
rotel-receiver = { path = "../rotel-receiver" }
rotel-storage = { path = "../rotel-storage" }
rotel-tui = { path = "../rotel-tui" }

[dev-dependencies]
mockito = "1.2"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.13"
csv = "1.3"
