[package]
name = "rotel-server"
version = "0.1.0"
edition = "2021"
authors = ["Rotel Contributors"]
description = "Lightweight web dashboard for visualizing OpenTelemetry logs, traces, and metrics"
license = "Apache-2.0"

[dependencies]
# Web framework
axum = { workspace = true }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Async runtime (already used by rotel-receiver)
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MIME type detection for static files
mime_guess = "2.0"

# Internal dependencies
rotel-storage = { path = "../rotel-storage" }
rotel-core = { path = "../rotel-core" }

# Logging
tracing = "0.1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3.10"
