[package]
name = "rotel-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal User Interface for Rotel OpenTelemetry receiver"
repository.workspace = true

[[bin]]
name = "rotel-tui"
path = "src/main.rs"

[lib]
name = "rotel_tui"
path = "src/lib.rs"

[dependencies]
# TUI framework
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
anyhow = "1.0"

# CLI parsing
clap = { workspace = true }
rotel-core = { path = "../rotel-core" }

[dev-dependencies]
mockito = "1.2"
